@@ -147,7 +147,7 @@ public class RegistrationServiceTests {
         assertNotNull(retrievedRegistrations);
         assertEquals(2, retrievedRegistrations.size());
         // Assertions for Registration 1
-        assertEquals(registration1, retrievedRegistrations.get(0));
+        assertEquals(registration1, retrievedRegistrations.getFirst());
         assertEquals(player1, retrievedRegistrations.get(0).getKey().getRegistrant());
         assertEquals(event1, retrievedRegistrations.get(0).getKey().getEvent());
         // Assertions for Registration 2
@@ -183,7 +183,7 @@ public class RegistrationServiceTests {
         assertNotNull(retrievedRegistrations);
         assertEquals(2, retrievedRegistrations.size());
         // Assertions for Registration 1
-        assertEquals(registration1, retrievedRegistrations.get(0));
+        assertEquals(registration1, retrievedRegistrations.getFirst());
         assertEquals(player, retrievedRegistrations.get(0).getKey().getRegistrant());
         assertEquals(event1, retrievedRegistrations.get(0).getKey().getEvent());
         // Assertions for Registration 2
@@ -217,7 +217,7 @@ public class RegistrationServiceTests {
         assertNotNull(retrievedRegistrations);
         assertEquals(2, retrievedRegistrations.size());
         // Assertions for Registration 1
-        assertEquals(registration1, retrievedRegistrations.get(0));
+        assertEquals(registration1, retrievedRegistrations.getFirst());
         assertEquals(player1, retrievedRegistrations.get(0).getKey().getRegistrant());
         assertEquals(event, retrievedRegistrations.get(0).getKey().getEvent());
         // Assertions for Registration 2
@@ -326,7 +326,7 @@ public class RegistrationServiceTests {
     * Tests finding all registratiosn for an invalid player.
    */
     @Test
-    public void getAllRegistrationsForPlayer_nonexistentPlayer(){
+    public void testGetAllRegistrationsForPlayerNonexistentPlayer(){
         //Act
         GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getAllRegistrationsByPlayer(validPlayerId));
 
@@ -340,7 +340,7 @@ public class RegistrationServiceTests {
     * Tests finding all registrations for an invalid event.
    */
     @Test
-    public void getAllRegistrationsForEvent_nonexistentEvent() {
+    public void testGetAllRegistrationsForEventNonexistentEvent() {
         //Act
         GlobalException e = assertThrows(GlobalException.class, () -> registrationService.getAllRegistrationsByEvent(validEventId));
 
@@ -353,7 +353,7 @@ public class RegistrationServiceTests {
     * Tests deleting a registration that does not exist.
    */
     @Test
-    public void testDeleteRegistration_NotFound() {
+    public void testDeleteRegistrationNotFound() {
         //Arrange
         Player player = new Player("Maya", "maya@gmail.com", "12345678", false);
         Event event = new Event(eventName, eventDescription, maxLimit, eventDate, startTime, endTime, location, player, game);
@@ -429,19 +429,14 @@ public class RegistrationServiceTests {
    */
     @Test
     public void testDeleteRegistrationEventNonExistentPlayer() {
-         //Arrange
-         Player player = new Player("Maya", "maya@gmail.com", "12345678", true);
-         Date pastDate = Date.valueOf(LocalDate.now().minusDays(1)); // Yesterday
-         Time pastStartTime = Time.valueOf(LocalTime.now().minusHours(2)); // Started 2 hours ago
-         Time pastEndTime = Time.valueOf(LocalTime.now().minusHours(1));   // Ended 1 hour ago
- 
-         //Act
-         GlobalException e = assertThrows(GlobalException.class, () -> registrationService.deleteRegistration(validPlayerId, validEventId));
- 
-         //Assert
-         assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
-         assertEquals("Player not found with ID: " + validPlayerId, e.getMessage());
-     }
+
+        //Act
+        GlobalException e = assertThrows(GlobalException.class, () -> registrationService.deleteRegistration(validPlayerId, validEventId));
+
+        //Assert
+        assertEquals(HttpStatus.NOT_FOUND, e.getStatus());
+        assertEquals("Player not found with ID: " + validPlayerId, e.getMessage());
+    }
 
     /**
     * Tests deleting a registration for a invalid event.
